Fixed output of backslashes in files, usage of absolute paths and files inner indentation BUT script can't handle several sources at once anymore and * in files might be replaced by... something else. DO NOT USE THIS VERSION\!

--- a/example/input/languages/native/Python.txt
+++ b/example/input/languages/native/Python.txt
@@ -1,1 +1,13 @@
 "http://www.python.org/"
+/* Multiline identation test :
+    \
+     \
+      \
+       \
+        \
+        /
+       /
+      /
+     /
+    /
+*/
